<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sup"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_semestr"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_semestr" />
        <item
            android:id="@+id/nav_subject"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_subject" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_story"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_story" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_plans" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_statistic" />
    </group>

</menu>
